# polymarketbot

./: .gitignore  Cargo.toml  Dockerfile  README_EN.md  README_ES.md  install_ubuntu.sh
src/: auth.rs  handlers.rs  main.rs  models.rs  monitor.rs  src.rar  strategies.rs  trade_logger.rs  trading.rs
